Fix label overlap issue in login form

--- a/loginpage.css
+++ b/loginpage.css
@@ -45,8 +45,12 @@ h2{
     font-size: 1em;
     pointer-events: none;
     color: #fff;
-    
+    transition: .5s;
 }
+.input-box input:focus ~ label,
+.input-box input:not(:placeholder-shown) ~ label {
+    top: -6px;
+}          
 .input-box input{
     width: 100%;
     background: transparent;
@@ -54,12 +58,18 @@ h2{
     border: none;
     font-size: 1em;
     color: #fff;
+    padding: 0 35px 0 5px;
+    margin: 0;
 
 }
 
 .input-box .icon{
     position: absolute;
     right: 8px;
-    
+    font-size: 1.2em;
+    color: #fff;
+    line-height: 57px;
+    top: 50%;
+    transform: translateY(-50%);
 
 }
